# Knowledge_base

./: .gitignore  README.md  docker-compose.yml  test.sh  test2.sh
CoreBackend-SpringBoot/: .gitignore  Dockerfile  docker-compose.yml  pom.xml
CoreBackend-SpringBoot/src/main/java/com/springboot/backend/: Application.java  JwtFilter.java
CoreBackend-SpringBoot/src/main/java/com/springboot/backend/client/: FastApiClient.java
CoreBackend-SpringBoot/src/main/java/com/springboot/backend/config/: CorsConfig.java  SecurityConfig.java
CoreBackend-SpringBoot/src/main/java/com/springboot/backend/controller/: AuthController.java  CompanyController.java  (+3 more)
CoreBackend-SpringBoot/src/main/resources/: application.properties
fastapi-ai-services/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
fastapi-ai-services/app/: main.py
fastapi-ai-services/app/core/: config.py
fastapi-ai-services/app/routers/: chat.py  document.py
fastapi-ai-services/app/services/: chat_service.py  document_service.py  vector_service.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  test.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/team/: page.tsx
frontend/app/dashboard/workspaces/: page.tsx
frontend/app/dashboard/workspaces/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: app-sidebar.tsx  stat-card.tsx  top-navbar.tsx
frontend/lib/: api.ts  mock-data.ts  store.ts
(+49 files in other folders)
